add bank account, fix error