@@ -3,21 +3,20 @@ package com.quantumbooks.core.service;
 import com.quantumbooks.core.dto.CustomerDto;
 import com.quantumbooks.core.dto.PaginatedResponseDto;
 import com.quantumbooks.core.entity.Customer;
-import com.quantumbooks.core.entity.Customer.CustomerStatus;
+import com.quantumbooks.core.exception.ResourceNotFoundException;
 import com.quantumbooks.core.mapper.CustomerMapper;
 import com.quantumbooks.core.repository.CustomerRepository;
 import com.quantumbooks.core.specification.CustomerSpecification;
+import com.quantumbooks.core.util.PaginationSortingUtils;
+import com.quantumbooks.core.util.PaginationUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,9 +24,10 @@ public class CustomerService {
     private final CustomerRepository customerRepository;
     private final CustomerMapper customerMapper;
 
-    @Transactional(readOnly = true)
-    public PaginatedResponseDto<CustomerDto> getCustomers(int page, int size, String search, CustomerStatus status, String[] sort) {
+    public PaginatedResponseDto<CustomerDto> getCustomers(int page, int size, String search, Customer.CustomerStatus status, String[] sort) {
+        Pageable pageable = PaginationSortingUtils.createPageable(page, size, sort);
         Specification<Customer> spec = Specification.where(null);
+
         if (search != null && !search.isEmpty()) {
             spec = spec.and(CustomerSpecification.searchBy(search));
         }
@@ -35,53 +35,45 @@ public class CustomerService {
             spec = spec.and(CustomerSpecification.hasStatus(status));
         }
 
-        Sort sortOrder = Sort.by(Sort.Direction.ASC, "customerID");
-        if (sort != null && sort.length > 0) {
-            sortOrder = Sort.by(sort[0], sort[1]);
-        }
-
-        Pageable pageable = PageRequest.of(page, size, sortOrder);
         Page<Customer> customerPage = customerRepository.findAll(spec, pageable);
 
-        List<CustomerDto> customerDtos = customerPage.getContent().stream()
+        List<CustomerDto> customers = customerPage.getContent().stream()
                 .map(customerMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        PaginatedResponseDto<CustomerDto> response = new PaginatedResponseDto<>();
-        response.setItems(customerDtos);
-        response.setCurrentPage(customerPage.getNumber());
-        response.setItemsPerPage(customerPage.getSize());
-        response.setTotalItems(customerPage.getTotalElements());
-        response.setTotalPages(customerPage.getTotalPages());
-
-        return response;
+        return PaginationUtils.createPaginatedResponse(customers, customerPage);
     }
 
     @Transactional
     public CustomerDto createCustomer(CustomerDto customerDto) {
         Customer customer = customerMapper.toEntity(customerDto);
-        customer = customerRepository.save(customer);
-        return customerMapper.toDto(customer);
+        Customer savedCustomer = customerRepository.save(customer);
+        return customerMapper.toDto(savedCustomer);
     }
 
-    @Transactional(readOnly = true)
     public CustomerDto getCustomerById(Long id) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Customer not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + id));
         return customerMapper.toDto(customer);
     }
 
     @Transactional
     public CustomerDto updateCustomer(Long id, CustomerDto customerDto) {
-        Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Customer not found"));
-        customerMapper.updateCustomerFromDto(customerDto, customer);
-        customer = customerRepository.save(customer);
-        return customerMapper.toDto(customer);
+        Customer existingCustomer = customerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + id));
+
+        Customer updatedCustomer = customerMapper.toEntity(customerDto);
+        updatedCustomer.setCustomerID(existingCustomer.getCustomerID());
+
+        Customer savedCustomer = customerRepository.save(updatedCustomer);
+        return customerMapper.toDto(savedCustomer);
     }
 
     @Transactional
     public void deleteCustomer(Long id) {
+        if (!customerRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Customer not found with id: " + id);
+        }
         customerRepository.deleteById(id);
     }
 }
